--- a/testbook.yml
+++ b/testbook.yml
@@ -2,41 +2,22 @@
   name: test
   gather_facts: False
   vars:
-    assignlist:
+    # list of strings with assignments
+    list_of_assignm:
       - aaa = 10
       - bbb = 'some string containing = for complexity'
-    derived: |
-      {% for item in assignlist %}
-      - { key: {{ item | regex_replace('=.*', '')}}:, value: val  }
-      {% endfor %}
-    list_of_identical_dicts:
-      - {key: k1, val: v1}
-      - {key: k2, val: v2}
 
-    list_strings:
+    list_of_assignm2:
       - "key1=val1"
       - "key2 = val2"
       - "key3= val3"
-          
-    users:
-      - name: john
-        email: john@example.com
-      - name: jane
-        email: jane@example.com
-      - name: fred
-        email: fred@example.com
-        password: 123!abc
+    # we can use Jinja2 templating to expand a variable definition at
+    # the time of parsing
 
-    network:
-      addresses:
-        private_ext:
-          - type: fixed
-            addr: 172.16.2.100
-        private_man:
-           - type: fixed
-             addr: 172.16.1.100
-           - type: floating
-             addr: 10.90.80.10        
+    dict_from_jinja: |
+      {% for item in list_of_assignm %}
+      - { key: {{ item | regex_replace('=.*', '')}}:, value: val  }
+      {% endfor %}
 
     list_dict:
       - name: name1
@@ -45,6 +26,21 @@
       - name: name2
         gammac: c
         delta: d
+
+    # alternative way specifying the dicts
+    list_dict2:
+      - {key: k1, val: v1}
+      - {key: k2, val: v2}
+
+    # list_dict3
+    users:
+      - name: john
+        email: john@example.com
+      - name: jane
+        email: jane@example.com
+      - name: fred
+        email: fred@example.com
+        password: 123!abc
 
     list_dict_dict:
       - dict_A:
@@ -66,7 +62,21 @@
       - dict_B:
           - gammac: c
           - delta: d
-            
+
+    # dict_dict_list_dict
+    network:
+      addresses:
+        private_ext:
+          - type: fixed
+            addr: 172.16.2.100
+        private_man:
+           - type: fixed
+             addr: 172.16.1.100
+           - type: floating
+             addr: 10.90.80.10
+
+    # a mixed layered structure
+    # list_dict_mixed
     domains:
       - name: domain1
         attr:
@@ -76,65 +86,64 @@
         attr:
           - a: a2_val
           - b: b2_val
-          - c: c2_val  
-        
-          
+          - c: c2_val
+
+#######################################################################
   tasks:
-    - name: assignlist parsing
+    - name: 'input variable: list_of_assignm'
       debug:
-        msg: list {{ assignlist }}
-      
-    - name: assignlist parsing
-      debug:
-        msg: list {%for i in assignlist %} {{ i }} {% endfor %}
+        msg: '{{ list_of_assignm }}'
 
-    - name: show derived
+    - name: Example of using map + regexp_replace on the list_of_assignm
       debug:
-        msg: "{{ derived }}"
+        msg: "{{ list_of_assignm | map('regex_replace', '([^=]*)=(.*)', '\\1 is \\2' ) | list }}"
 
-    - name: show list_of_identical_dicts
+    - name: using jinja2 loop to compose a message string from list_of_assignm
       debug:
-        msg: "{{ list_of_identical_dicts }}"
-        
-    - name: map + regexp_replace
+        msg: list {%for i in list_of_assignm %} {{ i }} {% endfor %}
+
+    - name: show dict we composed by assigning a jinja expression to a variable in the vars section
       debug:
-        msg: "{{ assignlist | map('regex_replace', '([^=]*)=(.*)', '\\1 is \\2' ) | list }}"
+        msg: "{{ dict_from_jinja }}"
 
-
-    - name: list_dict
+    - name: 'input variable: list_dict'
       debug:
         msg: "{{ list_dict }}"
 
     # map(attribute) returns a list of all the dicts' "name" attribute values
-    - name: show debug if one of the dicts in list_dict has  dict['name']="name1"
+    - name: use map to find dicts in list_dict that have dict['name']="name1"
       debug:
         msg: "{{ list_dict | map(attribute='name') | list }}"
-      when: '"name1" in list_dict | map(attribute="name") | list'
-      
-    - name: show debug if "name15" is contained in the name attribute of one of the dicts
-      debug:
-        msg: "{{ list_dict | map(attribute='name') | list }}"
-      when: '"name15" in list_dict | map(attribute="name") | list'
+      when: '"name1" in list_dict | map(attribute="name") | list'      
 
-
-    - name: list_dict_list_dict
+    - name: 'input variable: list_dict_list_dict'
       debug:
         msg: "{{ list_dict_list_dict }}"
 
-    - name: dict_dict_list_dict selectattr search
+    - name: 'input variable: network'
       debug:
-        msg: '{{ network.addresses.private_man | selectattr("type", "search", "^floating$") | map(attribute="addr") | list }}'
+        var: network
+    # selectattr search to filter a list of dicts. Here, it will only
+    # pick the dicts which contain a key "type" with a value matching
+    # the defined regexp search
+    - name: selectattr regexp search for "floating" in values of "type" attribute on the dict_dict_list_dict
+      debug:
+        msg: 'retrieved addresses: {{ network.addresses.private_man | selectattr("type", "search", "^floating$") | map(attribute="addr") | list }}'
 
-############## list_dict
+    ############## list_dict
+    - name: 'input variable: users'
+      debug:
+        var: users
+
     # selectattr picks from a list of hashes those hashes that match a test
     # Jinja Tests: https://jinja.palletsprojects.com/en/master/templates/#list-of-builtin-tests
     # Ansible Tests: https://docs.ansible.com/ansible/latest/user_guide/playbooks_tests.html
-    - name: list_dict selectattr 
+    - name: use selectattr to find those user dicts that do NOT have the attribute "password" defined 
       debug:
         msg: "{{ users | selectattr('password', 'undefined') | map(attribute='email') | list }}"
 
 
-############### list_dict_dict
+    ############### list_dict_dict
     - name: list_dict_dict
       debug:
         msg: "{{ list_dict_dict }}"
@@ -143,9 +152,13 @@
       debug:
         msg: "{{ list_dict_dict |combine(list_dict_dict2) }}"
 
-    - name: selectattr with test for defined of dict_A
+    - name: selectattr for finding dicts in list_dict_dict that have a key "dict_A" defined
       debug:
         msg: '{{ list_dict_dict | selectattr("dict_A","defined") | list }}'
+
+    - name: demonstrates how to show the dict_A value for the 1st entry in the result list
+      debug:
+        msg: '{{ (list_dict_dict | selectattr("dict_A","defined") | list)[0].dict_A }}'
 
     - name:  set_fact when list_dict_dict has key dict_A
       set_fact:
@@ -166,13 +179,8 @@
         msg: has_dict_NO is True
       when: has_dict_NO | bool
 
-        
-    - name: selectattr, use first result item, go down further
-      debug:
-        msg: '{{ (list_dict_dict | selectattr("dict_A","defined") | list)[0].dict_A }}'
-
     # since the Jinja values are evaluated before the ansible logic, the accessing of
-    # an undefined hash or list item leads to an error, even if the ansible when clause
+    # an undefined hash or list item leads to an error, even if the ansible when-clause
     # would prevent the message to be printed.
     - name: selectattr NO result, go down further
       debug:
@@ -198,39 +206,42 @@
       debug:
         msg: "{{ list_dict_dict | json_query('[*]') }}"
         
-    - name: domains
+    - name: 'input variable: domains  (a list of dicts)'
       debug:
         msg: "{{ domains }}"
         
-    - name: domains
+    - name: get list of values for the 'name' attributes of the dicts in the list
       debug:
         msg: "{{ domains | map(attribute='name') | list }}"
         
-    - name: domains
+    - name: 'use selectattr to filter for dicts that have a {name: domain1} item'
       debug:
         msg: "{{ domains | selectattr('name','eq','domain1') | list }}"
 
-    - name: domains
+    - name: 'From the previous result, extract the the "attr" attribute using map'
       debug:
         msg: "{{ domains | selectattr('name','eq','domain1') | map(attribute='attr') | list }}"
 
     # this will be nice to convert config file
+    - name: 'input variable: list_of_assignm2'
+      debug:
+        var: list_of_assignm2
     # TODO: this method does not allow the values to contain a '='
-    - name: convert list of strings to list of lists by splitting
+    - name: convert list of assignment strings to list of lists by splitting at "="
       set_fact:
         _splitres: >-
           {{ _splitres | default([]) + [item.split('=')] }}
-      loop: '{{ list_strings }}'
-    - name: show converted list
+      loop: '{{ list_of_assignm2 }}'
+    - name: 'show conversion result: list of lists'
       debug:
         msg: '{{ _splitres }}'
 
-    - name: convert resulting list into dict
+    - name: convert the resulting list of lists into dict
       set_fact:
         _splitdict: >-
           {{ _splitdict | default({})
                         | combine({ item[0].strip() : item[1].strip()}) }}
       loop: '{{ _splitres }}'
-    - name: show resulting dict
+    - name: show final dict
       debug:
         var: _splitdict
